# bharat-research-brain

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  HOSTED_DB.md  README.md  alembic.ini  docker-compose.yml  growth_gauntlet_out.txt  paper_backup_enhanced_replay.json  paper_backup_pre_enhanced.json  pyproject.toml
.claude/: launch.json
alembic/: env.py
alembic/seeds/: trading_calendar_2024_2027.csv
alembic/versions/: 0004_seed_trading_calendar_2021_2023.py  0005_fix_bakri_id_2023.py  (+30 more)
backend/: Dockerfile  cli.py  config.py  errors.py  logging_setup.py  main.py
docs/: ARCHITECTURE.md  MAVEN_LLM_STRATEGY.md  STRUCTURE.md  VALIDATION.md  maven-evaluation.md
maven-dashboard/: .env.example  .gitignore  README.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts
maven-newsroom/: .gitignore  PHASE2_FRONTEND.md  README.md
maven-site/: .env.example  .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
maven_instagram/: README.md  RUNBOOK_CRON.md
maven_reels/: README.md  RUNBOOK_CRON.md
scripts/: backfill_fundamentals_historical.py  backfill_market_breadth_historical.py  backfill_prices_2017.py  backfill_sector_momentum_historical.py  check_backtest_reproducible.py  download_permitted.py  gauntlet_lib.py  ingest_benchmark_financials.py  ingest_benchmark_index.py  ingest_bhavcopy.py  ingest_eod.py  ingest_gold.py  migrate_forward_to_supabase.py  nightly_run.py  paper_inception.py  paper_replay.py  populate_market_caps.py  run_daily.py  run_missing_backtests.py  test_hosted_db.py
(+792 files in other folders)
