[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bharat-research-brain"
version = "0.0.1"
description = "Personal multi-agent research system for Indian equity markets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "structlog>=24.4",
  "httpx>=0.27",
  "tenacity>=9.0",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "redis>=5.2",
  "typer>=0.12",
  "rich>=13.7",
  "yfinance>=0.2.40",
  "feedparser>=6.0",
  "transformers>=4.44",
  "torch>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
  "mypy>=1.13",
  "ruff>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
